将 koishi 的 restart 修改为 unless-stopped

--- a/Koishi/docker-compose.yml
+++ b/Koishi/docker-compose.yml
@@ -10,4 +10,4 @@ services:
     environment:
       - 'TZ=Asia/Shanghai'
     network_mode: 'bridge'
-    restart: always
+    restart: unless-stopped
